--- a/turabackend/composer.json
+++ b/turabackend/composer.json
@@ -19,7 +19,11 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "tymon/jwt-auth": "^2.0"
+
+
+        
     },
     "autoload": {
         "psr-4": {
@@ -65,3 +69,5 @@
     "minimum-stability": "stable",
     "prefer-stable": true
 }
+
+
